--- a/index.html
+++ b/index.html
@@ -82,24 +82,14 @@
   <h1>Watch Free Premium Adult Video – No Signup Required</h1>
 
   <div class="ad-container">
-    <!-- Adsterra Banner -->
-    <script type="text/javascript">
-      atOptions = {
-        'key' : 'cfe6fc7c68e3318c0e552c6c6312c209',
-        'format' : 'iframe',
-        'height' : 250,
-        'width' : 300,
-        'params' : {}
-      };
-    </script>
-    <script type="text/javascript" src="//www.highperformanceformat.com/cfe6fc7c68e3318c0e552c6c6312c209/invoke.js"></script>
+    <!-- Custom Banner -->
+    <a href="https://t.ancdu.link/341879/7272?bo=2753,2754,2755,2756&popUnder=true&aff_sub5=SF_006OG000004lmDN&aff_sub4=AT_0002">
+      <img src="https://www.imglnkx.com/9882/DAT-460_DESIGN-23859_7_300100.gif" width="300" height="100" border="0" />
+    </a>
   </div>
 
   <video src="https://files.catbox.moe/wppn9a.mp4" autoplay muted controls playsinline preload="auto" poster="https://yourdomain.com/thumbnail.jpg"></video>
 
-  <a class="cta-button" href="https://www.profitableratecpm.com/ce6ivccs53?key=4f6f1c61682bd4534e2d2f24c191fdd4" target="_blank" rel="noopener noreferrer">
-    🔞 Unlock Full Video Access Now
-  </a>
 
   <section>
     <h2>Why Viewers Love This Video</h2>
@@ -146,14 +136,55 @@
     </div>
   </section>
 
-  <!-- Social Bar -->
-  <script type='text/javascript' src='//pl26870440.profitableratecpm.com/de/fe/20/defe20cc99b911d434f425091e53a0e7.js'></script>
+  <!-- ✅ New Social Bar -->
+  <script defer src="https://crxcr1.com/im_jerky?lang=en&mode=prerecorded&outlinkUrl=https://t.ancdu.link/341879/7272?bo=2753%2C2754%2C2755%2C2756&popUnder=true&aff_sub5=SF_006OG000004lmDN&aff_sub4=AT_0018"></script>
 
-  <!-- Push Notifications -->
-  <script src="https://push-sdk.com/pfe/current/tag.min.js?z=REPLACE_WITH_YOUR_ID" data-cfasync="false" async></script>
+  <!-- ✅ Postitial -->
+  <script src="https://crxcr1.com/popin/latest/popin-min.js"></script>
+  <script>
+    var crakPopInParamsIframe = {
+      url: 'https://t.ancdu.link/341879/9882/optimized?bo=2753,2754,2755,2756&po=6456&aff_sub5=SF_006OG000004lmDN&aff_sub4=AT_0016&aff_id=1&transaction_id=postitial',
+      decryptUrl: false,
+      contentUrl: 'https://t.ancdu.link/341879/9882/optimized?bo=2753,2754,2755,2756&po=6456&aff_sub5=SF_006OG000004lmDN&aff_sub4=AT_0016&aff_id=1&transaction_id=postitial',
+      decryptContentUrl: false,
+      contentType: 'iframe',
+      width: '85%',
+      height: '85%',
+      timeout: false,
+      delayClose: 0,
+      clickStart: false,
+      closeIntent: false,
+      postitialBehavior: true,
+      closeButtonColor: '#000',
+      closeCrossColor: '#fff',
+      shadow: true,
+      shadowColor: '#000',
+      shadowOpacity: '.5',
+      shadeColor: '#111',
+      shadeOpacity: '0',
+      border: '1px',
+      borderColor: '#000',
+      borderRadius: '0px',
+      leadOut: true,
+      animation: 'slide',
+      direction: 'up',
+      verticalPosition: 'center',
+      horizontalPosition: 'center',
+      expireDays: 0.01
+    };
+  </script>
 
-  <!-- Popunder -->
-  <script type='text/javascript' src='//pl26871093.profitableratecpm.com/4d/8b/ee/4d8bee2691dd6843a2afcd1ea03008d2.js'></script>
+  <!-- ✅ Popup Overlay -->
+  <script src="https://crxcr1.com/popin/latest/popin-min.js"></script>
+  <script>
+    var crakPopInParamsOverlay = {
+      url: 'https://t.ancdu.link/341879/7272?bo=2753,2C2754,2C2755,2C2756&popUnder=true&aff_sub5=SF_006OG000004lmDN&aff_sub4=AT_0019',
+      decryptUrl: false,
+      contentType: 'overlay',
+      coverOverlay: true,
+      expireDays: 0.01
+    };
+  </script>
 
   <footer>
     &copy; 2025 Premium Adult Stream. All rights reserved.
