--- a/index.html
+++ b/index.html
@@ -1,194 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="google-site-verification" content="5R9UUIHv654fVfkXU_z4z38G8Dg0Y9ld-TjwUEcKvM8" />
-
-  <title>Watch Premium Adult Video Online – Full HD, No Signup</title>
-  <meta name="description" content="Stream premium adult videos in full HD without signing up. Fast, secure, and private viewing across all devices. Watch now – no hassle, no fees." />
-  <meta name="keywords" content="adult video HD, free adult streaming, no signup porn, watch adult online, private video stream, adult content mobile" />
-  <meta name="robots" content="index, follow" />
-
-  <!-- Open Graph -->
-  <meta property="og:title" content="Watch Premium Adult Video – Free Full HD Stream" />
-  <meta property="og:description" content="Enjoy exclusive adult video content in stunning HD. No registration needed. Stream fast, smooth, and secure." />
-  <meta property="og:type" content="video.other" />
-  <meta property="og:url" content="https://yourdomain.com" />
-  <meta property="og:image" content="https://yourdomain.com/thumbnail.jpg" />
-
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #000;
-      color: #fff;
-      line-height: 1.6;
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-    h1, h2, h3 {
-      color: #ff0055;
-      margin-top: 1.5em;
-    }
-    .cta-button {
-      display: inline-block;
-      padding: 15px 30px;
-      background-color: #ff0055;
-      color: #fff;
-      text-decoration: none;
-      font-size: 1.2em;
-      border-radius: 8px;
-      margin: 20px 0;
-      animation: pulse 1.5s infinite;
-      transition: background-color 0.3s ease;
-    }
-    .cta-button:hover {
-      background-color: #e6004d;
-    }
-    @keyframes pulse {
-      0%, 100% { transform: scale(1); }
-      50% { transform: scale(1.05); }
-    }
-    video {
-      width: 100%;
-      max-height: 480px;
-      border: 3px solid #ff0055;
-      border-radius: 10px;
-      background-color: black;
-      margin-bottom: 1em;
-    }
-    ul {
-      list-style-type: disc;
-      margin-left: 20px;
-    }
-    .ad-container {
-      margin: 20px auto;
-      text-align: center;
-      max-width: 320px;
-    }
-    footer {
-      margin-top: 50px;
-      font-size: 0.9em;
-      color: #ccc;
-      text-align: center;
-    }
-  </style>
+  <title>Shortener</title>
 </head>
 <body>
 
-  <h1>Watch Free Premium Adult Video – No Signup Required</h1>
-
-  <div class="ad-container">
-    <!-- Custom Banner -->
-    <a href="https://t.ancdu.link/341879/7272?bo=2753,2754,2755,2756&popUnder=true&aff_sub5=SF_006OG000004lmDN&aff_sub4=AT_0002">
-      <img src="https://www.imglnkx.com/9882/DAT-460_DESIGN-23859_7_300100.gif" width="300" height="100" border="0" />
-    </a>
-  </div>
-
-  <video src="https://files.catbox.moe/wppn9a.mp4" autoplay muted controls playsinline preload="auto" poster="https://yourdomain.com/thumbnail.jpg"></video>
-
-
-  <section>
-    <h2>Why Viewers Love This Video</h2>
-    <p>This isn’t just another clip. This is premium, HD-quality content that streams smoothly and looks amazing on any screen. Whether you're on your phone, tablet, or desktop, you’ll enjoy a seamless and private experience — all for free, no sign-up, no hassle.</p>
-    <ul>
-      <li>Watch instantly – no email or registration required</li>
-      <li>High-definition video, optimized for all devices</li>
-      <li>New scenes added regularly – always something fresh</li>
-      <li>Your privacy is respected — no data collected</li>
-      <li>Works fast, streams smooth — even on mobile</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>How to Get Full Access</h2>
-    <p>Getting the full experience is easy. Just click the button above to unlock the full video. You'll be redirected to our trusted partner site where you can enjoy everything, without interruptions or delays.</p>
-  </section>
-
-  <section>
-    <h2>Frequently Asked Questions</h2>
-    <div itemscope itemtype="https://schema.org/FAQPage">
-
-      <div itemprop="mainEntity" itemscope itemtype="https://schema.org/Question">
-        <h3 itemprop="name">Is the preview really free?</h3>
-        <div itemprop="acceptedAnswer" itemscope itemtype="https://schema.org/Answer">
-          <p itemprop="text">Yes! The preview is 100% free and available right here. You don’t need to sign up or provide any info.</p>
-        </div>
-      </div>
-
-      <div itemprop="mainEntity" itemscope itemtype="https://schema.org/Question">
-        <h3 itemprop="name">Can I watch it on mobile?</h3>
-        <div itemprop="acceptedAnswer" itemscope itemtype="https://schema.org/Answer">
-          <p itemprop="text">Absolutely. The video plays great on phones, tablets, and laptops. No apps, no downloads.</p>
-        </div>
-      </div>
-
-      <div itemprop="mainEntity" itemscope itemtype="https://schema.org/Question">
-        <h3 itemprop="name">Is my privacy protected?</h3>
-        <div itemprop="acceptedAnswer" itemscope itemtype="https://schema.org/Answer">
-          <p itemprop="text">Yes — we take privacy seriously. We don’t collect personal data or track your activity. It’s a safe space to enjoy your content.</p>
-        </div>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- ✅ New Social Bar -->
-  <script defer src="https://crxcr1.com/im_jerky?lang=en&mode=prerecorded&outlinkUrl=https://t.ancdu.link/341879/7272?bo=2753%2C2754%2C2755%2C2756&popUnder=true&aff_sub5=SF_006OG000004lmDN&aff_sub4=AT_0018"></script>
-
-  <!-- ✅ Postitial -->
-  <script src="https://crxcr1.com/popin/latest/popin-min.js"></script>
-  <script>
-    var crakPopInParamsIframe = {
-      url: 'https://t.ancdu.link/341879/9882/optimized?bo=2753,2754,2755,2756&po=6456&aff_sub5=SF_006OG000004lmDN&aff_sub4=AT_0016&aff_id=1&transaction_id=postitial',
-      decryptUrl: false,
-      contentUrl: 'https://t.ancdu.link/341879/9882/optimized?bo=2753,2754,2755,2756&po=6456&aff_sub5=SF_006OG000004lmDN&aff_sub4=AT_0016&aff_id=1&transaction_id=postitial',
-      decryptContentUrl: false,
-      contentType: 'iframe',
-      width: '85%',
-      height: '85%',
-      timeout: false,
-      delayClose: 0,
-      clickStart: false,
-      closeIntent: false,
-      postitialBehavior: true,
-      closeButtonColor: '#000',
-      closeCrossColor: '#fff',
-      shadow: true,
-      shadowColor: '#000',
-      shadowOpacity: '.5',
-      shadeColor: '#111',
-      shadeOpacity: '0',
-      border: '1px',
-      borderColor: '#000',
-      borderRadius: '0px',
-      leadOut: true,
-      animation: 'slide',
-      direction: 'up',
-      verticalPosition: 'center',
-      horizontalPosition: 'center',
-      expireDays: 0.01
+  <!-- Banner -->
+  <script type="text/javascript">
+    atOptions = {
+      'key' : 'cfe6fc7c68e3318c0e552c6c6312c209',
+      'format' : 'iframe',
+      'height' : 250,
+      'width' : 300,
+      'params' : {}
     };
   </script>
+  <script type="text/javascript" src="//www.highperformanceformat.com/cfe6fc7c68e3318c0e552c6c6312c209/invoke.js"></script>
 
-  <!-- ✅ Popup Overlay -->
-  <script src="https://crxcr1.com/popin/latest/popin-min.js"></script>
-  <script>
-    var crakPopInParamsOverlay = {
-      url: 'https://t.ancdu.link/341879/7272?bo=2753,2C2754,2C2755,2C2756&popUnder=true&aff_sub5=SF_006OG000004lmDN&aff_sub4=AT_0019',
-      decryptUrl: false,
-      contentType: 'overlay',
-      coverOverlay: true,
-      expireDays: 0.01
-    };
-  </script>
+  <!-- Popunder -->
+  <script type='text/javascript' src='//pl26871093.profitableratecpm.com/4d/8b/ee/4d8bee2691dd6843a2afcd1ea03008d2.js'></script>
 
-  <footer>
-    &copy; 2025 Premium Adult Stream. All rights reserved.
-  </footer>
+  <br/><br/>
+  <button onclick="window.location.href='https://earnmoneytm.github.io/cpa/'" style="font-size:20px; padding:10px 20px;">Continue</button>
 
 </body>
 </html>
