--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 </head>
 <body>
 
-  <h1>Explore the Gallery Before You Continue</h1>
+  <h1>Explora la Galeria Antes de Continuar</h1>
 
   <div class="gallery">
     <img src="https://cdni.pornpics.com/460/7/657/84858382/84858382_006_854d.jpg" alt="Image 1" />
@@ -124,8 +124,6 @@
     <img src="https://cdni.pornpics.com/460/7/535/73607602/73607602_152_36ef.jpg" alt="Image 6" />
     <img src="https://cdni.pornpics.com/460/7/488/10585993/10585993_099_9e73.jpg" alt="Image 7" />
     <img src="https://cdni.pornpics.com/460/7/491/65988909/65988909_039_dbcc.jpg" alt="Image 8" />
-    <img src="https://cdni.pornpics.com/460/7/574/63278522/63278522_080_8c00.jpg" alt="Image 9" />
-    <img src="https://cdni.pornpics.com/460/7/759/64711834/64711834_180_5249.jpg" alt="Image 10" />
   </div>
 
   <!-- Lightbox container -->
